--- a/views/playground.html
+++ b/views/playground.html
@@ -37,76 +37,48 @@
         </div>
     </nav>
 
+    <style>
+        td,
+        th {
+            border: 1px solid black;
+            text-align: center;
+        }
+    </style>
+
+    <script>
+
+    </script>
+
     <div class="container">
-        <div class="kotak">
-            <div class="kotak-warna" style="background-color: #FF0000;"></div>
-            <div class="kotak-teks">80 - 100 %</div>
-            <div class="kotak-warna" style="background-color: #FF8000;"></div>
-            <div class="kotak-teks">60 - 80 %</div>
-            <div class="kotak-warna" style="background-color: #FFFF00;"></div>
-            <div class="kotak-teks">40 - 60 %</div>
-            <div class="kotak-warna" style="background-color: #80FF00;"></div>
-            <div class="kotak-teks">20 - 40 %</div>
-            <div class="kotak-warna" style="background-color: #007FFF;"></div>
-            <div class="kotak-teks">0 - 20 %</div>
-        </div>
 
-        <style>
-            .kotak-teks {
-                font-size: 16px;
-                position: relative;
-                display: inline-block;
-                line-height: 40px;
-                text-align: center;
-                float: left;
-                width: 80px;
-            }
 
-            .kotak-warna {
-                float: left;
-                width: 40px;
-                height: 20px;
-                position: relative;
-                display: inline-block;
-                margin: 10px 5px;
-            }
-
-            .kotak {
-                padding: 10px;
-                width: 160px;
-                height: 220px;
-                position: absolute;
-                display: block;
-                background-color: white;
-                border: 1px solid black;
-            }
-
-            .test {
-                position: relative;
-                width: 500px;
-                height: 500px;
-                background-color: red;
-                display: block;
-            }
-
-            .test2 {
-                position: absolute;
-                width: 200px;
-                height: 200px;
-                background-color: blue;
-                top: 10px;
-                right: 10px;
-                display: block;
-            }
-        </style>
-
-        <script>
-            var socket = io();
-            socket.on("acc", function (data) {
-                console.log(data);
-            })
-        </script>
-
+        <table>
+            <tr>
+                <th colspan="2">Dari</th>
+                <th rowspan="2"></th>
+                <th colspan="2">Ke</th>
+            </tr>
+            <tr>
+                <th>DPID</th>
+                <th>Port</th>
+                <th>DPID</th>
+                <th>Port</th>
+            </tr>
+            <tr>
+                <td>0000d2f04eaeca4e</td>
+                <td>1</td>
+                <td>&lt;&gt;</td>
+                <td>00007e05f4190c4f</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>0000d2f04eaeca4e</td>
+                <td>1</td>
+                <td>&lt;&gt;</td>
+                <td>00007e05f4190c4f</td>
+                <td>2</td>
+            </tr>
+        </table>
 </body>
 
 </html>
