Tambah web socket error handling

--- a/views/grafik.html
+++ b/views/grafik.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/lib/dygraph.min.js"></script>
     <script type="text/javascript" src="/js/lib/socket.io.js"></script>
+    <script type="text/javascript" src="/js/lib/notify.min.js"></script>
     <script type="text/javascript" src="/js/grafik-app.js"></script>
 </head>
 
