--- a/views/topologi.html
+++ b/views/topologi.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/lib/vis-network.min.js"></script>
     <script type="text/javascript" src="/js/lib/socket.io.js"></script>
+    <script type="text/javascript" src="/js/lib/notify.min.js"></script>
     <script type="text/javascript" src="/js/topo-app.js"></script>
 </head>
 
