Benerin laporan periode hari ini

--- a/views/laporan.html
+++ b/views/laporan.html
@@ -80,7 +80,7 @@
                 <br> <input type="radio" name="periode" id="periode" value="a" checked="checked">
                 Periode
                 <select name="per" id="per">
-                    <option value="1" selected>Hari ini</option>
+                    <option value="1" selected>24 Jam Terakhir</option>
                     <option value="2">1 Minggu Terakhir</option>
                     <option value="3">1 Bulan Terakhir</option>
                     <option value="4">1 Tahun Terakhir</option>
