Tambah menu panduan

--- a/views/test.html
+++ b/views/test.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/laporan">Laporan</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/laporan">Panduan</a>
+                </li>
             </ul>
         </div>
     </nav>
