--- a/views/grafik.html
+++ b/views/grafik.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        Sistem Pemantauan
+        Grafik Perangkat
     </title>
     <link rel="stylesheet" type="text/css" href="/css/lib/dygraph.css">
     <link rel="stylesheet" type="text/css" href="/css/lib/bootstrap.min.css">
@@ -52,6 +52,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/laporan">Laporan</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/panduan">Panduan</a>
                 </li>
             </ul>
         </div>
