Tambah fitur ubah label dan simpan topologi

--- a/views/panduan.html
+++ b/views/panduan.html
@@ -49,6 +49,10 @@
                 Pada menu ini dapat menampilkan topologi jaringan secara otomatis. Pengguna dapat mengklik link
                 atau ikon perangkat untuk menampilkan informasi perangkat. Selain itu, warna link antar perangkat
                 akan berubah secara otomatis setiap 10 detik sesuai throughput pada interface perangkat tersebut.
+                Secara default, nama perangkat/label menggunakan datapath ID (DPID). Pengguna dapat merubah nama 
+                perangkat dengan mengklik perangkat lalu mengklik tulisan <span style="color:red">Ubah nama</span>
+                lalu isikan namanya. Untuk menyimpan perubahan nama perangkat dan koordinat perangkat pada gambar
+                topologi, gunakan tombol "Simpan Bentuk Topologi" di kiri atas layar. 
             </p>
             <br>
             <h3>Menu Grafik</h3>
@@ -57,8 +61,9 @@
                 Menu ini digunakan untuk melihat grafik throughput perangkat yang akan diperbarui secara otomatis
                 sesuai pengaturan interval sflow pada sisi server (default 10 detik). 
                 Pengguna dapat melihat grafik perangkat berdasarkan Datapath ID (DPID) yang dipilih. 
-                Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu topologi dengan 
-                memilih ikon perangkat kemudian mengklik "Lihat Grafik >>" pada panel informasi perangkat.
+                Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu <b>Topologi</b> dengan 
+                memilih ikon perangkat kemudian mengklik <span style="color:red">Lihat Grafik >> </span>
+                pada panel informasi perangkat.
             </p>
             <br>
             <h3>Menu Laporan</h3>
