--- a/views/css/topo-app.css
+++ b/views/css/topo-app.css
@@ -46,3 +46,23 @@
     background-color: white;
     border: 1px solid black;
 }
+
+.tombol {
+    font-size: 0.9rem;
+    top: 20px;
+    left: 20px;
+    width: 210px;
+    height: 35px;
+    position: absolute;
+    display: block;
+    background-color: white;
+    border: 2px solid black;
+    padding: 5px;
+    text-align: center;
+    color: black;
+}
+
+.tombol:hover {
+    background-color: black;
+    color: white;
+}
