--- a/views/panduan.html
+++ b/views/panduan.html
@@ -35,6 +35,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/panduan">Panduan</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/test">Traffic generator</a>
+                </li>
             </ul>
         </div>
     </nav>
