--- a/views/test.html
+++ b/views/test.html
@@ -43,6 +43,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/laporan">Panduan</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/test">Traffic generator</a>
+                </li>
             </ul>
         </div>
     </nav>
