--- a/views/topologi.html
+++ b/views/topologi.html
@@ -41,6 +41,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/panduan">Panduan</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/test">Traffic generator</a>
+                </li>
             </ul>
         </div>
     </nav>
