--- a/views/panduan.html
+++ b/views/panduan.html
@@ -52,6 +52,7 @@
                 Pada menu ini dapat menampilkan topologi jaringan secara otomatis. Pengguna dapat mengklik link
                 atau ikon perangkat untuk menampilkan informasi perangkat. Selain itu, warna link antar perangkat
                 akan berubah secara otomatis setiap 10 detik sesuai throughput pada interface perangkat tersebut.
+                Throughput disini dihitung dari traffic Inbound + Outbound pada interface salah satu perangkat.
                 Secara default, nama perangkat/label menggunakan datapath ID (DPID). Pengguna dapat merubah nama 
                 perangkat dengan mengklik perangkat lalu mengklik tulisan <span style="color:red">Ubah nama</span>
                 lalu isikan namanya. Untuk menyimpan perubahan nama perangkat dan koordinat perangkat pada gambar
