--- a/views/test.html
+++ b/views/test.html
@@ -88,7 +88,7 @@
         </div>
         <button type="button" class="btn btn-primary" onclick="buat_traffic()">Buat Traffic</button>
         <br>
-        <br>Pengaturan saat ini :
+        <br>Traffic saat ini :
         <br>
         <div id="info"></div>
     </div>
