--- a/views/css/topo-app.css
+++ b/views/css/topo-app.css
@@ -37,7 +37,8 @@
     font-size: 0.9rem;
     bottom: 20px;
     left: 20px;
-    width: 120px;
+    width: 110px;
+    padding: 3px;
     position: absolute;
     display: block;
     background-color: white;
