--- a/views/topologi.html
+++ b/views/topologi.html
@@ -8,12 +8,12 @@
     <title>
         Topologi SDN
     </title>
-    <link rel="stylesheet" type="text/css" href="/css/lib/vis-network.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/lib/vis-network6.min.css">
     <link rel="stylesheet" type="text/css" href="/css/lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/topo-app.css">
     <script type="text/javascript" src="/js/lib/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/lib/vis-network.min.js"></script>
+    <script type="text/javascript" src="/js/lib/vis-network6.min.js"></script>
     <script type="text/javascript" src="/js/lib/socket.io.js"></script>
     <script type="text/javascript" src="/js/lib/notify.min.js"></script>
     <script type="text/javascript" src="/js/topo-app.js"></script>
