--- a/views/panduan.html
+++ b/views/panduan.html
@@ -46,37 +46,68 @@
         <div class="col">
             <br>
             <br>
-            <h3>Menu Topologi</h3>
+            <h3>Tentang Aplikasi</h3>
             <hr>
             <p>
-                Pada menu ini dapat menampilkan topologi jaringan secara otomatis. Pengguna dapat mengklik link
-                atau ikon perangkat untuk menampilkan informasi perangkat. Selain itu, warna link antar perangkat
-                akan berubah secara otomatis setiap 10 detik sesuai throughput pada interface perangkat tersebut.
-                Throughput disini dihitung dari traffic Inbound + Outbound pada interface salah satu perangkat.
-                Secara default, nama perangkat/label menggunakan datapath ID (DPID). Pengguna dapat merubah nama 
-                perangkat dengan mengklik perangkat lalu mengklik tulisan <span style="color:red">Ubah nama</span>
-                lalu isikan namanya. Untuk menyimpan perubahan nama perangkat dan koordinat perangkat pada gambar
-                topologi, gunakan tombol "Simpan Bentuk Topologi" di kiri atas layar. 
+                Aplikasi ini merupakan aplikasi yang digunakan untuk memantau throughput jaringan Software Defined
+                Network (SDN). Untuk saat ini jaringan SDN berjalan pada simulasi GNS3 menggunakan
+                <a href="https://www.openvswitch.org/" target="_blank">OpenvSwitch</a> (Openflow Switch),
+                <a href="https://onosproject.org/" target="_blank">ONOS</a> (SDN Controller), dan
+                <a href="https://sflow-rt.com/" target="_blank">sFlow-RT</a> (sflow collector).
+                Berikut ini merupakan penjelasan beberapa menu aplikasi ini.
             </p>
             <br>
-            <h3>Menu Grafik</h3>
+            <h4>Menu Topologi</h4>
             <hr>
+            Menu ini memiliki dua fitur yaitu :
+            <li>
+                Visualisasi topologi
+                <br><img src="/img/p_topo.png" alt="topologi">
+                <br>Topologi jaringan ditampilkan secara otomatis dan diperbarui setiap ada perubahan perangkat yang
+                terhubung. Semua perangkat baru yang terdeteksi akan terletak ditengah layar, untuk merubahnya pengguna
+                dapat
+                menggeser gambar perangkat tersebut kemudian mengklik tombol "Simpan Bentuk Topologi" pada kiri atas
+                layar.
+                Selain itu, warna link antar perangkat akan berubah secara otomatis setiap 10 detik sesuai throughput
+                Throughput disini dihitung dari traffic inbound + outbound pada interface salah satu perangkat yang
+                saling terhubung.
+            </li>
+            <li>
+                Informasi perangkat
+                <br><img src="/img/p_info.png" alt="panel informasi">
+                <br>Pengguna dapat mengklik gambar perangkat untuk menampilkan panel informasi perangkat pada sebelah
+                kanan layar. Panel ini juga digunakan untuk merubah nama perangkat pada sisi aplikasi untuk memudahkan
+                identifikasi
+                Pengguna dapat merubah nama perangkat dengan mengklik tulisan <span style="color:red">Ubah nama</span>
+                Pada panel ini juga terdapat pintasan untuk melihat grafik pada perangkat.
+            </li>
+            <br>
+            <h4>Menu Grafik</h4>
+            <hr>
+            <img src="/img/p_grafik.png" alt="grafik">
             <p>
                 Menu ini digunakan untuk melihat grafik throughput perangkat yang akan diperbarui secara otomatis
-                sesuai pengaturan interval sflow pada sisi server (default 10 detik). 
-                Pengguna dapat melihat grafik perangkat berdasarkan Datapath ID (DPID) yang dipilih. 
-                Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu <b>Topologi</b> dengan 
-                memilih ikon perangkat kemudian mengklik <span style="color:red">Lihat Grafik >> </span>
+                setiap 10 detik. Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu <b>Topologi</b>
+                dengan
+                memilih gambar perangkat kemudian mengklik <span style="color:red">Lihat Grafik >> </span>
                 pada panel informasi perangkat.
+                Penggunaan grafik: klik dan tahan untuk memperbesar, klik ganda untuk memperkecil, tombol shift + klik
+                untuk menggeser.
             </p>
             <br>
-            <h3>Menu Laporan</h3>
+            <h4>Menu Laporan</h4>
             <hr>
             <p>
-                Menu ini digunakan untuk melihat laporan throughput setiap perangkat pada periode waktu tertentu. 
-                Pengguna hanya perlu memilih periode yang akan ditampilkan kemudian klik tombol "Go" untuk 
+                Menu ini digunakan untuk melihat laporan throughput setiap perangkat pada periode waktu tertentu.
+                Pengguna hanya perlu memilih periode yang akan ditampilkan kemudian klik tombol "Go" untuk
                 menampilkan laporan. Laporan juga dapat dicetak dengan menekan tombol Ctrl+P pada keyboard atau
                 mengklik tombol "Cetak Laporan" pada bagian bawah laporan.
+            </p>
+            <br>
+            <h4>Menu Traffic generator</h4>
+            <hr>
+            <p>
+                Menu ini hanya digunakan untuk testing aplikasi.
             </p>
         </div>
     </div>
