--- a/views/panduan.html
+++ b/views/panduan.html
@@ -65,10 +65,8 @@
                 <br><img src="/img/p_topo.png" alt="topologi">
                 <br>Topologi jaringan ditampilkan secara otomatis dan diperbarui setiap ada perubahan perangkat yang
                 terhubung. Semua perangkat baru yang terdeteksi akan terletak ditengah layar, untuk merubahnya pengguna
-                dapat
-                menggeser gambar perangkat tersebut kemudian mengklik tombol "Simpan Bentuk Topologi" pada kiri atas
-                layar.
-                Selain itu, warna link antar perangkat akan berubah secara otomatis setiap 10 detik sesuai throughput
+                dapat menggeser gambar perangkat tersebut kemudian mengklik tombol "Simpan Bentuk Topologi" pada kiri atas
+                layar. Selain itu, warna link antar perangkat akan berubah secara otomatis setiap 10 detik sesuai throughput.
                 Throughput disini dihitung dari traffic inbound + outbound pada interface salah satu perangkat yang
                 saling terhubung.
             </li>
@@ -77,8 +75,8 @@
                 <br><img src="/img/p_info.png" alt="panel informasi">
                 <br>Pengguna dapat mengklik gambar perangkat untuk menampilkan panel informasi perangkat pada sebelah
                 kanan layar. Panel ini juga digunakan untuk merubah nama perangkat pada sisi aplikasi untuk memudahkan
-                identifikasi
-                Pengguna dapat merubah nama perangkat dengan mengklik tulisan <span style="color:red">Ubah nama</span>
+                identifikasi perangkat.
+                Pengguna dapat merubah nama perangkat dengan mengklik tulisan <span style="color:red">Ubah nama</span>.
                 Pada panel ini juga terdapat pintasan untuk melihat grafik pada perangkat.
             </li>
             <br>
@@ -86,10 +84,9 @@
             <hr>
             <img src="/img/p_grafik.png" alt="grafik">
             <p>
-                Menu ini digunakan untuk melihat grafik throughput perangkat yang akan diperbarui secara otomatis
+                Menu ini digunakan untuk melihat grafik throughput perangkat yang dipilih. Grafik ini diperbarui secara otomatis
                 setiap 10 detik. Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu <b>Topologi</b>
-                dengan
-                memilih gambar perangkat kemudian mengklik <span style="color:red">Lihat Grafik >> </span>
+                dengan memilih gambar perangkat kemudian mengklik <span style="color:red">Lihat Grafik >> </span>
                 pada panel informasi perangkat.
                 Penggunaan grafik: klik dan tahan untuk memperbesar, klik ganda untuk memperkecil, tombol shift + klik
                 untuk menggeser.
@@ -100,8 +97,8 @@
             <p>
                 Menu ini digunakan untuk melihat laporan throughput setiap perangkat pada periode waktu tertentu.
                 Pengguna hanya perlu memilih periode yang akan ditampilkan kemudian klik tombol "Go" untuk
-                menampilkan laporan. Laporan juga dapat dicetak dengan menekan tombol Ctrl+P pada keyboard atau
-                mengklik tombol "Cetak Laporan" pada bagian bawah laporan.
+                menampilkan laporannya di bawah layar. Laporan dapat dicetak dengan menekan tombol Ctrl+P pada keyboard atau
+                mengklik tombol "Cetak Laporan" yang terletak di bawah laporan.
             </p>
             <br>
             <h4>Menu Traffic generator</h4>
