--- a/views/test.html
+++ b/views/test.html
@@ -51,10 +51,26 @@
     </nav>
 
     <div class="container">
-        <br>Traffic Generator :
+        <h2>Traffic Generator</h2>
+        <hr style='margin:0.5em 0;border: 1px solid black'>
+        Menu ini digunakan untuk membuat traffic pada simulasi SDN.
+        Traffic dibuat dengan cara menjalankan perintah iperf dari client ke iperf server.
+        perintah ini akan berjalan selama 2 menit. Nilai maksimal throughput adalah 5 Megabyte per detik.
+        <br>
+        <br>Keterangan :
+        <br>- Jika terdapat pengguna yang membuat traffic dengan <b>perangkat asal</b> yang sama, 
+        maka perintah yang akan berjalan adalah <b>perintah yang terakhir</b>.  
+        <br>- Jika terdapat pengguna yang membuat traffic dengan <b>perangkat tujuan</b> yang sama, 
+        maka perintah <b>tidak akan dijalankan</b>.
+        <br>- Perangkat di simulasi GNS3 tidak memiliki bandwidth yang stabil, sehingga ada 
+        kemungkinan throughput yang dihasilkan lebih rendah dari yang diinputkan disini.
+        <br>
+        <br> Berikut ini Topologi Jaringan yang digunakan :
+        <img src="/img/topology.png" alt="topologi"> 
+        <br>
         <div class="row">
             <div class="col-md-3">
-                Pilih perangkat asal
+                Pilih perangkat asal (client)
             </div>
             <div class="col-md-3">
                 <select id="asal">
@@ -67,7 +83,7 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                Pilih perangkat tujuan
+                Pilih perangkat tujuan (server)
             </div>
             <div class="col-md-3">
                 <select id="tujuan">
@@ -83,7 +99,7 @@
                 Masukkan nilai throughput
             </div>
             <div class="col-md-3">
-                <input type="text" name="throughput" id="throughput" style="width:100px"> KB/s
+                <input type="number" min="1" max="5000" step="100" name="throughput" id="throughput" style="width:100px"> KB/s
             </div>
         </div>
         <button type="button" class="btn btn-primary" onclick="buat_traffic()">Buat Traffic</button>
