--- a/views/test.html
+++ b/views/test.html
@@ -56,19 +56,19 @@
         <hr style='margin:0.5em 0;border: 1px solid black'>
         Menu ini digunakan untuk membuat traffic pada simulasi SDN.
         Traffic dibuat dengan cara menjalankan perintah iperf dari client ke iperf server.
-        perintah ini akan berjalan selama 2 menit. Nilai maksimal throughput adalah 5 Megabyte per detik.
+        Perintah ini akan berjalan selama 2 menit. Nilai maksimal throughput adalah 5 Megabyte per detik.
         <br>
         <br>Keterangan :
-        <br>- Jika <b>perangkat asal</b> yang dipilih trafficnya masih berjalan, 
+        <br>- Jika <b>perangkat asal</b> yang dipilih memiliki traffic yang masih berjalan, 
         maka perintah traffic generator yang akan berjalan adalah <b>perintah yang terakhir</b>.  
-        <br>- Jika <b>perangkat tujuan</b> yang dipilih trafficnya masih berjalan, 
+        <br>- Jika <b>perangkat tujuan</b> yang dipilih memiliki traffic yang masih berjalan, 
         maka perintah traffic generator <b>tidak akan dijalankan</b>.
-        <br>- Perangkat di simulasi GNS3 tidak memiliki bandwidth yang stabil, sehingga ada 
+        <br>- Perangkat di simulasi GNS3 bandwidthnya tidak stabil, sehingga ada 
         kemungkinan throughput yang dihasilkan lebih rendah dari yang dimasukkan disini.
         <br>
         <br> Berikut ini Topologi Jaringan yang digunakan :
-        <br><img src="/img/topology.png" alt="topologi"> 
-        <br>
+        <br><img src="/img/topology.png" alt="topologi" style="max-width: 500px;"> 
+        <div style="height:50px;display:block"></div>
         <div class="row">
             <div class="col-md-3">
                 Pilih perangkat asal (client)
