--- a/views/test.html
+++ b/views/test.html
@@ -108,6 +108,7 @@
         <br>Traffic saat ini :
         <br>
         <div id="info"></div>
+        <div style="height:100px;display:block"></div>
     </div>
 
 </body>
