--- a/views/test.html
+++ b/views/test.html
@@ -57,11 +57,11 @@
         Menu ini digunakan untuk membuat traffic pada simulasi SDN.
         Traffic dibuat dengan cara menjalankan perintah iperf dari client ke iperf server.
         Perintah ini akan berjalan selama 2 menit. Nilai maksimal throughput adalah 5 Megabyte per detik.
+        Hasil dari traffic generator ini dapat dilihat pada menu Topologi dan Grafik setelah 10 detik.
         <br>
         <br> Berikut ini Topologi Jaringan yang digunakan :
         <br><img src="/img/topology.png" alt="topologi" style="max-width: 500px;"> 
-        <div style="height:50px;display:block"></div>
-        <br>Catatan :
+        <br>Catatan sebelum membuat traffic :
         <br>- Jika <b>perangkat asal</b> yang dipilih memiliki traffic yang masih berjalan, 
         maka perintah traffic generator yang akan berjalan adalah <b>perintah yang terakhir</b>.  
         <br>- Jika <b>perangkat tujuan</b> yang dipilih memiliki traffic yang masih berjalan, 
