fix traffic generator

--- a/views/test.html
+++ b/views/test.html
@@ -63,9 +63,10 @@
         <br><img src="/img/topology.png" alt="topologi" style="max-width: 500px;"> 
         <br>Catatan sebelum membuat traffic :
         <br>- Jika <b>perangkat asal</b> yang dipilih memiliki traffic yang masih berjalan, 
-        maka perintah traffic generator yang akan berjalan adalah <b>perintah yang terakhir</b>.  
+        maka perintah traffic generator akan diganti dengan <b>perintah yang terakhir</b>.  
         <br>- Jika <b>perangkat tujuan</b> yang dipilih memiliki traffic yang masih berjalan, 
-        maka perintah traffic generator <b>tidak akan dijalankan</b>.
+        maka perintah traffic generator <b>tidak akan dijalankan</b> 
+        walaupun informasi dibawah menampilkan ada traffic ke perangkat tujuan tersebut.  
         <br>- Perangkat di simulasi GNS3 bandwidthnya tidak stabil, sehingga ada 
         kemungkinan throughput yang dihasilkan lebih rendah dari yang dimasukkan disini.
         <br>
