removed traffic generator check

--- a/views/test.html
+++ b/views/test.html
@@ -66,7 +66,8 @@
         maka perintah traffic generator akan diganti dengan <b>perintah yang terakhir</b>.  
         <br>- Jika <b>perangkat tujuan</b> yang dipilih memiliki traffic yang masih berjalan, 
         maka perintah traffic generator <b>tidak akan dijalankan</b> 
-        walaupun informasi dibawah menampilkan ada traffic ke perangkat tujuan tersebut.  
+        walaupun informasi dibawah menampilkan ada traffic ke perangkat tujuan tersebut.
+        <br>- Jika traffic yang dibuat tidak berjalan, coba tunggu beberapa saat kemudian buat traffic lagi.  
         <br>- Perangkat di simulasi GNS3 bandwidthnya tidak stabil, sehingga ada 
         kemungkinan throughput yang dihasilkan lebih rendah dari yang dimasukkan disini.
         <br>
