--- a/views/test.html
+++ b/views/test.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="/laporan">Laporan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/laporan">Panduan</a>
+                    <a class="nav-link" href="/panduan">Panduan</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/test">Traffic generator</a>
