--- a/views/panduan.html
+++ b/views/panduan.html
@@ -50,7 +50,7 @@
             <hr>
             <p>
                 Aplikasi ini merupakan aplikasi yang digunakan untuk memantau throughput jaringan Software Defined
-                Network (SDN). Untuk saat ini jaringan SDN berjalan pada simulasi GNS3 menggunakan
+                Network (SDN). Untuk saat ini jaringan SDN berjalan pada simulasi <a href="https://www.gns3.com/" target="_blank">GNS3</a> menggunakan
                 <a href="https://www.openvswitch.org/" target="_blank">OpenvSwitch</a> (Openflow Switch),
                 <a href="https://onosproject.org/" target="_blank">ONOS</a> (SDN Controller), dan
                 <a href="https://sflow-rt.com/" target="_blank">sFlow-RT</a> (sflow collector).
@@ -61,7 +61,7 @@
             <hr>
             Menu ini memiliki dua fitur yaitu :
             <li>
-                Visualisasi topologi
+                <b>Visualisasi topologi</b>
                 <br><img src="/img/p_topo.png" alt="topologi">
                 <br>Topologi jaringan ditampilkan secara otomatis dan diperbarui setiap ada perubahan perangkat yang
                 terhubung. Semua perangkat baru yang terdeteksi akan terletak ditengah layar, untuk merubahnya pengguna
@@ -71,12 +71,12 @@
                 saling terhubung.
             </li>
             <li>
-                Informasi perangkat
+                <b>Informasi perangkat</b>
                 <br><img src="/img/p_info.png" alt="panel informasi">
                 <br>Pengguna dapat mengklik gambar perangkat untuk menampilkan panel informasi perangkat pada sebelah
                 kanan layar. Panel ini juga digunakan untuk merubah nama perangkat pada sisi aplikasi untuk memudahkan
                 identifikasi perangkat.
-                Pengguna dapat merubah nama perangkat dengan mengklik tulisan <span style="color:red">Ubah nama</span>.
+                Pengguna dapat merubah nama perangkat dengan mengklik <span style="color:red">Ubah nama</span>.
                 Pada panel ini juga terdapat pintasan untuk melihat grafik pada perangkat.
             </li>
             <br>
@@ -85,10 +85,10 @@
             <img src="/img/p_grafik.png" alt="grafik">
             <p>
                 Menu ini digunakan untuk melihat grafik throughput perangkat yang dipilih. Grafik ini diperbarui secara otomatis
-                setiap 10 detik. Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu <b>Topologi</b>
+                setiap 10 detik. Untuk penggunaan lebih mudah, menu grafik ini dapat dibuka melalui menu <a href="/">Topologi</a>
                 dengan memilih gambar perangkat kemudian mengklik <span style="color:red">Lihat Grafik >> </span>
                 pada panel informasi perangkat.
-                Penggunaan grafik: klik dan tahan untuk memperbesar, klik ganda untuk memperkecil, tombol shift + klik
+                <br><b>Cara Penggunaan grafik:</b> klik dan tahan untuk memperbesar, klik ganda untuk memperkecil, tombol shift + klik
                 untuk menggeser.
             </p>
             <br>
