--- a/views/test.html
+++ b/views/test.html
@@ -56,8 +56,8 @@
         <hr style='margin:0.5em 0;border: 1px solid black'>
         Menu ini digunakan untuk membuat traffic pada simulasi SDN.
         Traffic dibuat dengan cara menjalankan perintah iperf dari client ke iperf server.
-        Perintah ini akan berjalan selama 2 menit. Nilai maksimal throughput adalah 2 Megabyte per detik.
-        Hasil dari traffic generator ini dapat dilihat pada menu Topologi dan Grafik setelah 10 detik.
+        Perintah ini akan berjalan selama <b>2 menit</b>. Nilai maksimal throughput adalah <b>2 Megabyte per detik</b>.
+        Hasil dari traffic generator ini dapat dilihat pada menu <a href="/" target="_blank">Topologi</a> dan <a href="/grafik" target="_blank">Grafik</a> setelah 10 detik.
         <br>
         <br> Berikut ini Topologi Jaringan yang digunakan :
         <br><img src="/img/topology.png" alt="topologi" style="max-width: 500px;"> 
