--- a/views/panduan.html
+++ b/views/panduan.html
@@ -53,7 +53,7 @@
                 Network (SDN). Untuk saat ini jaringan SDN berjalan pada simulasi <a href="https://www.gns3.com/" target="_blank">GNS3</a> menggunakan
                 <a href="https://www.openvswitch.org/" target="_blank">OpenvSwitch</a> (Openflow Switch),
                 <a href="https://onosproject.org/" target="_blank">ONOS</a> (SDN Controller), dan
-                <a href="https://sflow-rt.com/" target="_blank">sFlow-RT</a> (sflow collector).
+                <a href="https://sflow-rt.com/" target="_blank">sFlow-RT</a> (sFlow Collector).
                 Berikut ini merupakan penjelasan beberapa menu aplikasi ini.
             </p>
             <br>
